fix sticky (content hidden behind menu bar)

--- a/menu.css
+++ b/menu.css
@@ -1,5 +1,10 @@
-body{
+body {
   margin:0;
+}
+
+.content {
+  padding: 20px;
+  margin-top: 20px;
 }
 
 .menu {
@@ -10,7 +15,7 @@ body{
   width: 100%;
 }
 
-.menu a{
+.menu a {
   float: left;
   color: #ffffff;
   text-align: center;
@@ -19,12 +24,12 @@ body{
   font-size: 10px
 }
 
-.menu a:hover{
+.menu a:hover {
   background-color: #ffffff;
   color: #000000;
 }
 
-.menu a.active{
+.menu a.active {
   background-color: #c442fc;
   color: #ffffff;
 }
